$Id$                       -*-text-*-


**** 0.66 NOT RELEASED YET

Fix rt.cpan.org #52307 AAAA v4compat parsing bug 
    Acknowledgement: BLBLACK

Fix AAAA dynamic update

    Dynamic update of AAAA caused FORMERR on the prerequisite caused
    by AAAA creating rdata even when an address whas never specified.
    This fix may cause difference in behavior for people who expect a
    NULL address ("::") when creating a AAAA without an address
    specified.


Feature HIP RR

    Added support for the HIP RR, RFC5205
    perldoc Net::DNS::RR::HIP for more information.


Feature DHCID RR
    Added rudimentary support for the DHCID RR.


Fix rt.cpan.org #50883
    This is basically #11931 but for cygwin.

    Codepath in Cygwin and Win32 are now the same. This adds a
    dependency in cygwin.
    Acknowledgements "mikaraento"

Fix rt.cpan.org #45407 and #43190
    Fixed escaping of semicolon.

    Note a change in behavior: 
    For TXT and SPF the rdatastr method (and therefore the
    print, and string method) returns the escaped format while the 
    chr_str_list method will return unescaped format.


Fix rt.cpan.org #43393
    Typo in 01-resolver.t

Fix rt.cpan.org #43273
    Added check for unitialized opcode in headermask in
    Nameserver.pm

Fix rt.cpan.org #46635
    Minor documentation error in opt.pm

Fix rt.cpan.org #51009
     Fixed handling of empty string in Net::DNS::stripdot. 
     Elegant one-liner supplied by JMEHNLE.

Fix rt.cpan.org #49035

    Comment parsing fixed: Semicolon in character string blocks (such
    as in TXT and NPTR) were only recognized when escaped.
    Also fixed the NAPTR regular expression to not interpret 
    "bla' 'foo" as two strings bla and foo, but as one: bla' 'foo

Fix cd flag settings 

    Resolver bug and fix reported by Jon Haidu.


**** 0.65 January 26, 2009

Fix rt.cpan.org #41076

    When the AAAA object was constructed with new_from_hash with an