@@ -110,7 +110,7 @@ sub rdatastr {
 
 	if (exists $self->{"afi"}) {
 		if ($self->{"afi"} eq "47") {
-			$rdatastr = join('', $self->idp, $self->dsp);
+			$rdatastr = "0x".join('.', $self->idp, $self->dsp);
 		} else {
 			$rdatastr = "; AFI $self->{'afi'} not supported";
 		}
@@ -256,11 +256,14 @@ Returns the RR's system identifier.
 
 Returns the RR's NSAP selector.
 
+=head1 NOTE
+
 =head1 COPYRIGHT
 
 Copyright (c) 1997-2002 Michael Fuhr. 
 
 Portions Copyright (c) 2002-2004 Chris Reinhardt.
+
 
 All rights reserved.  This program is free software; you may redistribute
 it and/or modify it under the same terms as Perl itself.. 
